# CodeAgent-MCP

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  railway.toml  test_index.py
agent_server/: __init__.py  history.py  loop.py
cli/: __init__.py  main.py
code_server/: __init__.py  db.py  indexer.py  server.py  sessions.py  telemetry.py  tools.py  watcher.py
tests/: test_indexer.py  test_js_ts_indexer.py  test_loop.py  test_telemetry.py  test_tools.py
